compile to includeInJar

--- a/build.gradle
+++ b/build.gradle
@@ -30,38 +30,38 @@ dependencies {
 	compile ("org.fc.zippo:org.fc.zippo.oapi:3.3.0")
 	
 	// for SHA3 and SECP256K1
-    includeInJar "com.madgag.spongycastle:core:1.54.0.0"
-    includeInJar "com.madgag.spongycastle:prov:1.54.0.0"
+    // includeInJar "com.madgag.spongycastle:core:1.54.0.0"
+    // includeInJar "com.madgag.spongycastle:prov:1.54.0.0"
     
     // ##################################
 	//includeInJar 'org.ethereum:ethereumj-core:1.6.3-RELEASE'
-	compile "io.netty:netty-all:4.0.30.Final"
-    compile "com.madgag.spongycastle:core:${scastleVersion}" // for SHA3 and SECP256K1
-    compile "com.madgag.spongycastle:prov:${scastleVersion}" // for SHA3 and SECP256K1
+	includeInJar "io.netty:netty-all:4.0.30.Final"
+    includeInJar "com.madgag.spongycastle:core:${scastleVersion}" // for SHA3 and SECP256K1
+    includeInJar "com.madgag.spongycastle:prov:${scastleVersion}" // for SHA3 and SECP256K1
 
-    compile "org.iq80.leveldb:leveldb:${leveldbVersion}"     // Java API wrapper around native components
+    includeInJar "org.iq80.leveldb:leveldb:${leveldbVersion}"     // Java API wrapper around native components
 
-    compile "org.ethereum:leveldbjni-all:1.18.3"             // native leveldb components
+    includeInJar "org.ethereum:leveldbjni-all:1.18.3"             // native leveldb components
 
-    compile "org.ethereum:solcJ-all:0.4.8"                   // Solidity Compiler win/mac/linux binaries
+    includeInJar "org.ethereum:solcJ-all:0.4.8"                   // Solidity includeInJarr win/mac/linux binaries
 
-    compile "com.cedarsoftware:java-util:1.8.0" // for deep equals
-    compile "org.javassist:javassist:3.15.0-GA"
-    compile "org.slf4j:slf4j-api:${slf4jVersion}"
-    compile "ch.qos.logback:logback-classic:1.1.7"
-    compile "org.codehaus.jackson:jackson-mapper-asl:1.9.13"
-    compile "com.google.code.findbugs:jsr305:3.0.0"
-    compile "com.fasterxml.jackson.core:jackson-databind:2.5.1"
-    compile "org.apache.commons:commons-collections4:4.0"
-    compile "org.apache.commons:commons-lang3:3.4"
-    compile "commons-codec:commons-codec:1.10"
-    compile "org.springframework:spring-context:${springVersion}"
-    compile "org.springframework:spring-tx:${springVersion}"
-    compile "org.springframework:spring-orm:${springVersion}"
-    compile "com.typesafe:config:1.2.1"
-    compile "com.googlecode.concurrent-locks:concurrent-locks:1.0.0"
+    includeInJar "com.cedarsoftware:java-util:1.8.0" // for deep equals
+    includeInJar "org.javassist:javassist:3.15.0-GA"
+    includeInJar "org.slf4j:slf4j-api:${slf4jVersion}"
+    includeInJar "ch.qos.logback:logback-classic:1.1.7"
+    includeInJar "org.codehaus.jackson:jackson-mapper-asl:1.9.13"
+    includeInJar "com.google.code.findbugs:jsr305:3.0.0"
+    includeInJar "com.fasterxml.jackson.core:jackson-databind:2.5.1"
+    includeInJar "org.apache.commons:commons-collections4:4.0"
+    includeInJar "org.apache.commons:commons-lang3:3.4"
+    includeInJar "commons-codec:commons-codec:1.10"
+    includeInJar "org.springframework:spring-context:${springVersion}"
+    includeInJar "org.springframework:spring-tx:${springVersion}"
+    includeInJar "org.springframework:spring-orm:${springVersion}"
+    includeInJar "com.typesafe:config:1.2.1"
+    includeInJar "com.googlecode.concurrent-locks:concurrent-locks:1.0.0"
 
-    compile("com.googlecode.json-simple:json-simple:1.1.1") {
+    includeInJar("com.googlecode.json-simple:json-simple:1.1.1") {
         exclude group: 'junit', module: 'junit'
     }
 
