--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
 		classpath "onight.osgi:zpp-gradle:3.0.0"
 	 }
 }
-version = '3.0.1'
+version = '3.0.2'
 
 repositories{
 	maven{ url "http://dl.bintray.com/ethereum/maven/"}
@@ -17,9 +17,9 @@ project.group='org.brewchain'
 apply plugin: 'zippo'
 
 ext {
-    slf4jVersion = '1.7.7'
+    slf4jVersion = '1.7.13'
     leveldbVersion = '0.7'
-    scastleVersion = '1.53.0.0'
+    scastleVersion = '1.54.0.0'
     springVersion = '4.2.0.RELEASE'
     hibernateVersion = '4.3.7.Final'
     junitVersion = '4.11'
@@ -47,17 +47,23 @@ dependencies {
 
     includeInJar "com.cedarsoftware:java-util:1.8.0" // for deep equals
     includeInJar "org.javassist:javassist:3.15.0-GA"
-    includeInJar "org.slf4j:slf4j-api:${slf4jVersion}"
-    includeInJar "ch.qos.logback:logback-classic:1.1.7"
-    includeInJar "org.codehaus.jackson:jackson-mapper-asl:1.9.13"
+    compile "org.slf4j:slf4j-api:${slf4jVersion}"
+    // includeInJar "ch.qos.logback:logback-classic:1.1.7"
+    compile "ch.qos.logback:logback-classic:1.1.3"
+    compile "org.codehaus.jackson:jackson-mapper-asl:1.9.13"
     includeInJar "com.google.code.findbugs:jsr305:3.0.0"
+    
+    includeInJar 'com.fasterxml.jackson:jackson-parent:2.5'
     includeInJar "com.fasterxml.jackson.core:jackson-databind:2.5.1"
     includeInJar "org.apache.commons:commons-collections4:4.0"
-    includeInJar "org.apache.commons:commons-lang3:3.4"
-    includeInJar "commons-codec:commons-codec:1.10"
+    // includeInJar "org.apache.commons:commons-lang3:3.4"
+    compile "org.apache.commons:commons-lang3:3.5"
+    compile "commons-codec:commons-codec:1.10"
+    
     includeInJar "org.springframework:spring-context:${springVersion}"
     includeInJar "org.springframework:spring-tx:${springVersion}"
     includeInJar "org.springframework:spring-orm:${springVersion}"
+    
     includeInJar "com.typesafe:config:1.2.1"
     includeInJar "com.googlecode.concurrent-locks:concurrent-locks:1.0.0"
 
@@ -75,7 +81,7 @@ dependencies {
     
     // ##################################
 	
-	compile "org.bouncycastle:bcprov-jdk15on:1.58"
+	includeInJar "org.bouncycastle:bcprov-jdk15on:1.58"
 	
 	compile 'org.osgi:org.osgi.annotation:6.0.0'
 	
