--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,8 @@ ext {
     slf4jVersion = '1.7.13'
     // leveldbVersion = '0.7'
     scastleVersion = '1.54.0.0'
-    springVersion = '4.2.0.RELEASE'
-    hibernateVersion = '4.3.7.Final'
+   // springVersion = '4.2.0.RELEASE'
+   // hibernateVersion = '4.3.7.Final'
     junitVersion = '4.11'
 }
 
@@ -30,27 +30,27 @@ dependencies {
 	compile ("org.fc.zippo:org.fc.zippo.oapi:3.3.2")
 	
 	// for SHA3 and SECP256K1
-    // includeInJar "com.madgag.spongycastle:core:1.54.0.0"
-    // includeInJar "com.madgag.spongycastle:prov:1.54.0.0"
+    includeInJar "com.madgag.spongycastle:core:1.58.0.0"
+    includeInJar "com.madgag.spongycastle:prov:1.58.0.0"
     
     // ##################################
 	//includeInJar 'org.ethereum:ethereumj-core:1.6.3-RELEASE'
-    includeInJar "com.madgag.spongycastle:core:${scastleVersion}" // for SHA3 and SECP256K1
-    includeInJar "com.madgag.spongycastle:prov:${scastleVersion}" // for SHA3 and SECP256K1
-
+   	//includeInJar "com.madgag.spongycastle:core:${scastleVersion}" // for SHA3 and SECP256K1
+   	//includeInJar "com.madgag.spongycastle:prov:${scastleVersion}" // for SHA3 and SECP256K1
 
     includeInJar "org.javassist:javassist:3.15.0-GA"
     compile "org.slf4j:slf4j-api:${slf4jVersion}"
     // includeInJar "ch.qos.logback:logback-classic:1.1.7"
     compile "ch.qos.logback:logback-classic:1.1.3"
-        includeInJar "com.google.code.findbugs:jsr305:3.0.0"
+       
+   	includeInJar "com.google.code.findbugs:jsr305:3.0.0"
     
     // includeInJar "org.apache.commons:commons-lang3:3.4"
     //compile "org.apache.commons:commons-lang3:3.5"
     //compile "commons-codec:commons-codec:1.10"
     	compile ("org.brewchain:org.brewchain.bcapi:3.3.4")
     
-	includeInJar "org.bouncycastle:bcprov-jdk15on:1.58"
+	//includeInJar "org.bouncycastle:bcprov-jdk15on:1.60"
 	
 	compile 'org.osgi:org.osgi.annotation:6.0.0'
 	
